@@ -8,7 +8,6 @@ Accepted for 2.1
 ================
 - Single article list and viewer interface (as in Bloglines).
 - Synchronisation via .Mac or FTP.
-- Sort on multiple columns.
 - Fix web browser to block popups.
 - Download images within articles so that they can be viewed offline.
 
@@ -48,7 +47,6 @@ Wishlist
 - Manual sorting of folders or arrange folders by other means.
 - Dedicated button to mark all read.
 - Cache full XML for original article and return via Applescript.
-- Cmd+Enter to open current page in the opposite of whatever is set in preferences.
 - Show warning icon on collapsed group folder if any sub-folders have warnings.
 - Allow smart folder criteria to match the beginning and end of strings as well as 'contains'.
 - More manual control over feed icon updating.
